# sentinelflow

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: auth.py  main.py  metrics.py  redis_helper.py  schemas.py
app/api/: __init__.py  jobs.py
scripts/: run.sh  scheduler.py  worker.py
tests/: conftest.py  test_integration.py  test_jobs.py
