[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelflow"
version = "0.1.0"
description = "Local-first distributed job scheduler with RAG-based ops agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Debanjan Chatterjee" }
]
keywords = ["scheduler", "distributed-systems", "redis", "rag", "ops"]

# ---- Core runtime dependencies ----
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "redis>=5.0",
  "pydantic>=2.6",
  "croniter>=2.0",
  "tenacity>=8.2",
  "python-json-logger>=2.0",
  "prometheus-client>=0.16",
]

# ---- Optional dependency groups ----
[project.optional-dependencies]

# RAG / Ops Agent stack
rag = [
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.2",
  "langchain>=0.1.0",
  "langchain-community>=0.0.20",
  "ollama>=0.1.7",
]

# Development & quality
# (keep this light for a weekend MVP)
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "black>=24.1",
  "ruff>=0.3",
  "mypy>=1.8",
  "httpx>=0.24",
]

# ---- Entry points (CLI-friendly) ----
[project.scripts]
sentinelflow-scheduler = "sentinelflow.scheduler.main:run"
sentinelflow-worker = "sentinelflow.worker.main:run"
sentinelflow-ops = "sentinelflow.ops.cli:main"

# ---- Tooling configuration ----
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
